hphp/test/slow/type_annotation/type_annotation_alias5.php.expectf
Fatal error: when resolving type constant C::T, alias MyAlias2 does not resolve to a class in %s on line 11
